* more coherent naming of parameters in partitionBundle-method
* partitionBundle,character-method debugged and more robust
* usage of blapply in as.speeches-method
* hits-method: paramter cqp defaults to FALSE for hits-method, size defaults to FALSE
* new parameter cqp for dispersion-method
* aggregation for dispersion-method when length(sAttribute) == 1

v0.6.1
* configure file removed to avoid unwanted bugs

v0.6.0
* this is the first version that passes all CRAN tests and that is available via CRAN
* the 'rcqp' remains the interface to the CWB, but usage of rcqp functions is wrapped into an new new CQI.rcqp (R6) class. CQI.perl and CQI.cqpserver are introduced as alternative interfaces to prepare portability to Windows systems
* code in the vignette and method examples will be executed conditionally, if rcqp and the polmineR.sampleCorpus are available
* the polmineR.sampleCorpus package is available in a drat repo at www.github.com/PolMine
* a series of bug fixes

v0.5.6
  * slot tf renamed to stat, class is data.table now
  * keyness_method moved to data.tables


v0.5.3
  * renamed collocations to cooccurrences, seems more appropriate
  
v0.5.2
  * multicore for term frequency counts (param for partition)

v0.5.0
  * renamed xxxCluster to xxxBundle, bundle-superclass introduced
  * slot label/labels renamed to name/names
  * name/names-method instead of label/labels

v0.4.57
  * debugging of tf,partition-method: There was an error, if all hits for a query in a corpus
    were obtained outside of the partition
  * tf,context-method to provide quick access to number of query results
  * view-method as a wrapper for View
  * multicore for tf-method if cqp=TRUE

v0.4.56
  * pAttributes-method for character, and partition objects
    for easy access to inspect available p-attributes
  * (hidden) helper functions .parseRegistry and .parseInfoFile
  * automatic detection of corpus type, if .info file is available