@@ -2,7 +2,7 @@ Package: polmineR
 Type: Package
 Title: Toolset for Corpus Analysis
 Version: 0.6.2
-Date: 2016-06-26
+Date: 2016-09-01
 Author: Andreas Blaette
 Maintainer: Andreas Blaette <andreas.blaette@uni-due.de>
 Imports:
