@@ -30,7 +30,6 @@ exportClasses(kwic)
 exportClasses(ngrams)
 exportClasses(partition)
 exportClasses(partitionBundle)
-exportClasses(simple_triplet_matrix)
 exportClasses(tempcorpus)
 exportClasses(textstat)
 exportMethods("+")
