@@ -104,12 +104,12 @@ setMethod("blapply", "list", function(x, f, mc = TRUE, progress = TRUE, verbose 
           retval <- unlist(retval, recursive = FALSE)
         }
       } else if (backend == "doParallel"){
-        cl <- makeCluster(getOption("polmineR.cores"))
+        cl <- parallel::makeCluster(getOption("polmineR.cores"))
         doParallel::registerDoParallel(cl)
         retval <- foreach(i=c(1:length(x))) %dopar% {
           f(x[[i]], mc=FALSE, progress=FALSE, verbose=FALSE, ...)
         }
-        stopCluster(cl)
+        parallel::stopCluster(cl)
       } else if (backend == "doSNOW"){
         cl <- snow::makeSOCKcluster(getOption("polmineR.cores"))
         doSNOW::registerDoSNOW(cl)
@@ -155,58 +155,3 @@ setMethod("blapply", "bundle", function(x, f, mc=FALSE, progress=TRUE, verbose=F
   )
   x
 })
-
-#' @exportClass simple_triplet_matrix
-if (require("bigmemory", quietly = TRUE) && require("bigmemory", quietly = TRUE)){
-  setClass("simple_triplet_matrix")
-  setClass("big.matrix")
-  setClassUnion(
-    name = "virtualMatrixClass",
-    members = c("matrix", "simple_triplet_matrix", "big.matrix")
-    )
-} else if (require("slam", quietly = TRUE)){
-  setClassUnion(
-    name = "virtualMatrixClass",
-    members = c("matrix", "simple_triplet_matrix")
-  )
-} else {
-  setClassUnion(
-    name = "virtualMatrixClass",
-    members = c("matrix")
-  )
-}
-
-
-#' @rdname blapply
-setMethod("blapply", "virtualMatrixClass", function(x, f, chunks = 2, finalizer = list(as.matrix, as.dist, as.matrix), progress = TRUE, verbose = FALSE, mc = FALSE, ...){
-  chunkList <- polmineR:::divide(1:ncol(x), n=chunks)
-  chunkCombinations <- t(cbind(utils::combn(1:chunks, 2), matrix(rep(1:chunks, each=2), nrow = 2)))
-  .worker <- function(i, FUN, M, chunkList, chunkCombinations, ...){
-    furtherArgs <- list(...)
-    for (x in c("progress", "mc", "verbose")) furtherArgs[[x]] <- NULL
-    rowsToProcess <- chunkList[[ chunkCombinations[i,1] ]]
-    colsToProcess <- chunkList[[ chunkCombinations[i,2] ]]
-    almost <- do.call(
-      what = FUN,
-      args = c(list(x = as.matrix(M[,rowsToProcess]), y = as.matrix(M[,colsToProcess]), furtherArgs))
-    )
-    toReturn <- t(apply(almost, 1, function(row) row))
-    colnames(toReturn) <- as.character(colsToProcess)
-    rownames(toReturn) <- as.character(rowsToProcess)
-    data.table::melt(toReturn)
-  }
-  resultList <- blapply(
-    x = c(1:nrow(chunkCombinations)),
-    f = .worker,
-    M = x, FUN = f,
-    chunkList = chunkList, chunkCombinations = chunkCombinations,
-    progress = progress, mc = mc, verbose = FALSE,
-    ...
-  )
-  result <- do.call(rbind, resultList)
-  retval <- as.matrix(slam::simple_triplet_matrix(i=result$Var2, j = result$Var1, v = result$value))
-  for (i in 1:length(finalizer)) retval <- finalizer[[i]](retval)
-  retval
-})
-
-
