@@ -8,6 +8,7 @@ v0.6.2
 * hits-method: paramter cqp defaults to FALSE for hits-method, size defaults to FALSE
 * new parameter cqp for dispersion-method
 * aggregation for dispersion-method when length(sAttribute) == 1
+* bugfix for ngrams-method, sample code for the method
 
 v0.6.1
 * configure file removed to avoid unwanted bugs
